--- a/week1_pg3.html
+++ b/week1_pg3.html
@@ -7,5 +7,37 @@
 </head>
 <body>
     Page 3
+
+
+
+<!--Table Elements-->
+<table border="1" >
+
+    <thead>State of Fun</thead>
+
+    <tr>
+        <th>What is this </th>
+        <th>empty boxes </th>
+        <th>More empty boxes </th>
+    </tr>
+    <tr>Row 2</tr>
+        <th>What I hate   </th>
+        <th>What you hate  </th>
+        <th>What they hate </th>
+
+        
+    <tr>Row 3</tr>
+
+</table>
+ 
+<h2>Links</h2>
+<a href="index.html">Page 1</a>
+<a href="Week1_pg2.html">Page 2</a>
+<a href="Week1_pg3.html">Page 3</a>
+<a href="week1_pg4.html">Page 4</a>
+<a href="#top"> Go to Top</a> 
+
+<a href="https://www.google.com" target="_blank">google</a>
+
 </body>
 </html>
