--- a/week1_pg4.html
+++ b/week1_pg4.html
@@ -42,7 +42,17 @@
 
 <a href="https://www.google.com" target="_blank">google</a>
 
-<form action="/form-page" method="post">
+
+
+    <!-- build a form here -->
+     <!-- Form will collect visitor's information to gather for Email newsletter -->
+
+     <!-- Checkboxes, labels, or Radio buttons-->
+<h4>Enter your Contact Information to sign up for my Newsletter.</h4>
+
+
+<fieldset>
+<form action="/form-page" method="post" >
 
     <p>
         <label for="name">Name:</label>
@@ -69,7 +79,7 @@
 
     </p> 
     </fieldset>
-
+</fieldset>
 </form>
 
 
