--- a/week1_pg3.html
+++ b/week1_pg3.html
@@ -8,8 +8,11 @@
 <body>
     Page 3
 
+    <p>Things I like to do. </p>
 
+<p>Fishing Expeditions</p>
 
+<p>Look at all fish I caught. </p>
 <!--Table Elements-->
 <table border="1" >
 
