--- a/week1_pg2.html
+++ b/week1_pg2.html
@@ -26,7 +26,6 @@
     <!-- Table with Border -->
 <table border="1"> 
 
-        
         <tr>
             <th align-center style="background-color: greenyellow">States </th>
             <th style="background-color: greenyellow">Capital </th>
@@ -56,15 +55,22 @@
 </table>
 
  
-<h2>Links</h2>
+<h2>Links</h2> <!-- links to navigate the website-->
 <a href="index.html">Page 1</a>
-<a href="Week1_pg2.html">Page 2</a>
-<a href="Week1_pg3.html">Page 3</a>
-<a href="week1_pg4.html">Page 4</a>
-<a href="#top"> Go to Top</a> 
+<a href="Week1_pg2.html">Page 2</a><br></br>
+<a href="Week1_pg3.html">Page 3
+<a href="week1_pg4.html">Page 4</a><br></br>
+<a href="#top"> Go to Top</a> <br></br>
 
-<a href="https://www.google.com" target="_blank">google</a>
-
-
+<h4>WebLinks</h4>
 </body>
+
+<footer> <!-- bottom of the page Footers for consistent navigation -->
+<a href="https://www.google.com" target="_blank">Google</a> <!-- Google to search-->
+<a href="https://Promideo.com" target="_blank">Promideo.com</a> <!-- Promideo to work on assignments-->
+<a href="https://https://developer.mozilla.org/en-US/" target="_blank">MDM Developer Resources</a>  <!-- Coding Help-->
+<a href="https://https://github.com/TheDudas/Week1.git" target="_blank">John Dudas GitHub</a> <!-- My GitHub Repository-->
+</footer>
+
 </html>
+
