--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Dudas</title>  <!-- Title is the description of the page in the top of the browser bar-->
 </head>
-<header><H1>Week 1 Assignment</H1></header>
+<header><H1>John Dudas Website</H1></header>
 <!-- the space above the Body is the Header and head and HTML configurations that tell Browsers this is an HTML page. JS and CSS would be here if they were included. -->
+
+<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600" /img>
+<p>Balloon over the Lake</p>
 
 
 <body> <!-- Body is the main part of the page. -->
@@ -49,7 +52,7 @@
 
 
     
-    <h2>Links</h2>
+    <h3>Links</h3>
         <a href="index.html">Page 1</a>
         <a href="Week1_pg2.html">Page 2</a>
         <a href="Week1_pg3.html">Page 3</a>
