--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head> <!-- defines the meta data and title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Dudas</title>  <!-- Title is the description of the page in the top of the browser bar-->
+    <title>John Dudas Home</title>  <!-- Title is the description of the page in the top of the browser bar-->
 </head>
 <header><H1>John Dudas Website</H1></header>
 <!-- the space above the Body is the Header and head and HTML configurations that tell Browsers this is an HTML page. JS and CSS would be here if they were included. -->
+ <!-- Navigation Bar to navigate each Webpage-->
+<nav>    
+    <div><hr>   
+        <a href="index.html">Home</a>
+        <a href="Week1_pg2.html">Tables</a>
+        <a href="Week1_pg3.html">Photos
+        <a href="week1_pg4.html">Form</a>
+    </div>
+<hr></hr>
 
-<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600" /img>
+
+<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600" /img> <!-- Image of Balloon -->
 <p>Balloon over the Lake</p>
 
 
@@ -27,39 +37,23 @@
         <li>Watch Sports</li>
         <li>Go Fishing</li>
         <li>Play with Grandson</li>
-        <li>Fun stuff</li>
+        <li>Enjoy the Lake View</li>
         
     </ul>
     </p>
-
-<!--Table Elements--> 
-<!-- Tables are not fun This should have three rows and three columns-->
-<table border="2" >
-
-    <thead>State of Fun</thead> 
-    <span><tr> Row 2</tr></span>
-    <tr> Row 3</tr> 
-
-    <tr>
-        <th>What is this?  </th>
-        <th>Empty boxes  </th>
-        <th>More empty boxes  </th>
-    </tr>
-        <th>What I hate   </th>
-        <th>What you hate  </th>
-        <th>What they hate </th>
-</table>
-
-
-    
-    <h3>Links</h3>
-        <a href="index.html">Page 1</a>
-        <a href="Week1_pg2.html">Page 2</a>
-        <a href="Week1_pg3.html">Page 3</a>
-        <a href="week1_pg4.html">Page 4</a>
-        <a href="#top"> Go to Top</a> 
-
-        <a href="https://www.google.com" target="_blank">google</a>
+ 
 
 </body>
+
+<a href="#top"> Go to Top</a> <br></br> <!-- Returns you to the top of the page-->
+
+<footer> <!-- bottom of the page Footers for consistent navigation -->
+
+    <h4>WebLinks</h4>
+    <a href="https://www.google.com" target="_blank">Google</a> <!-- Google to search-->
+    <a href="https://promineotech.com/" target="_blank">Promineotech.com</a> <!-- Promideo to work on assignments-->
+    <a href="https://developer.mozilla.org/en-US/" target="_blank">MDM Developer Resources</a>  <!-- Coding Help-->
+    <a href="https://github.com/TheDudas/Week1.git" target="_blank">John Dudas GitHub</a> <!-- My GitHub Repository-->
+</footer>
+
 </html>
