--- a/week1_pg3.html
+++ b/week1_pg3.html
@@ -3,44 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 3</title>
+    <title>Photos</title>
 </head>
+<!-- Navigation Bar to navigate each Webpage-->
+<nav>    
+    <h2>Photo Page</h2> <!-- links to navigate the website-->   
+            <div><hr>   
+                <a href="index.html">Home</a>
+                <a href="Week1_pg2.html">Tables</a>
+                <a href="Week1_pg3.html">Photos
+                <a href="week1_pg4.html">Form</a>
+            </div>
+</nav>
+<hr></hr>
+
+
 <body>
-    Page 3
+    <h3>Photos</h3>
+    
+    <p>Photos of important things.</p>
 
-    <p>Things I like to do. </p>
-
-<p>Fishing Expeditions</p>
+<p>Fishing off the Dock</p>
 
 <p>Look at all fish I caught. </p>
-<!--Table Elements-->
-<table border="1" >
 
-    <thead>State of Fun</thead>
-
-    <tr>
-        <th>What is this </th>
-        <th>empty boxes </th>
-        <th>More empty boxes </th>
-    </tr>
-    <tr>Row 2</tr>
-        <th>What I hate   </th>
-        <th>What you hate  </th>
-        <th>What they hate </th>
-
-        
-    <tr>Row 3</tr>
-
-</table>
+<!-- pictures of Fish and Lake things-->
  
-<h2>Links</h2>
-<a href="index.html">Page 1</a>
-<a href="Week1_pg2.html">Page 2</a>
-<a href="Week1_pg3.html">Page 3</a>
-<a href="week1_pg4.html">Page 4</a>
-<a href="#top"> Go to Top</a> 
-
-<a href="https://www.google.com" target="_blank">google</a>
 
 </body>
+
+<a href="#top"> Go to Top</a> <br></br>
+
+<footer> <!-- bottom of the page Footers for consistent navigation -->
+
+    <h4>WebLinks</h4>
+    <a href="https://www.google.com" target="_blank">Google</a> <!-- Google to search-->
+    <a href="https://promineotech.com/" target="_blank">Promineotech.com</a> <!-- Promideo to work on assignments-->
+    <a href="https://developer.mozilla.org/en-US/" target="_blank">MDM Developer Resources</a>  <!-- Coding Help-->
+    <a href="https://github.com/TheDudas/Week1.git" target="_blank">John Dudas GitHub</a> <!-- My GitHub Repository-->
+</footer>
+
 </html>
