--- a/week1_pg3.html
+++ b/week1_pg3.html
@@ -17,23 +17,31 @@
 </nav>
 <hr></hr>
 
-
-<body>
-    <h3>Photos</h3>
+<body> <!-- main body of page-->
     
-    <p>Photos of important things.</p>
+    <p><h3>Photos of things I like</h3></p> <!--emphasize title page-->
 
-<p>Fishing off the Dock</p>
-
-<p>Look at all fish I caught. </p>
+<p>Fishing off the Dock, Hot air balloon, Fireworks, Moon, Sunrise in Mist, Dog Wilson, Clay & Wilson, Fami</p> 
 
 <!-- pictures of Fish and Lake things-->
- 
+ <img src="Images/smallfish.jpg" width="150" height="200"> <!-- made all picture the same size. Need to box them to add text. ?-->
+ <img src="Images/bluegill.jpg" width="150" height="200"> 
+ <img src="Images/bigfish.JPG" width="150" height="200"> 
+ <img src="Images/Balloon1.jpg" width="150" height="200"> 
+ <img src="Images/Fireworks.jpg" width="150" height="200">
+ <img src="Images/moonlight.jpg" width="150" height="200">
+ <img src="Images/sunriseMist.jpg" width="150" height="200">
+ <img src="Images/Wilson_Side.jpg" width="150" height="200">
+  <img src="Images/Clay_Wilson.jpg" width="150" height="200"> 
+ <img src="Images/Fam_2023.jpg" width="150" height="200">
+ <img src="Images/UofM_OSU.jpg" width="150" height="200">
+ <img src="Images/fansinthestands.jpg" width="150" height="200">
+
 
 </body>
-
-<a href="#top"> Go to Top</a> <br></br>
-
+<p></p>
+<a href="#top"> Go to Top</a> <br></br> <!-- link to the top of page-->
+<hr>
 <footer> <!-- bottom of the page Footers for consistent navigation -->
 
     <h4>WebLinks</h4>
