--- a/week1_pg4.html
+++ b/week1_pg4.html
@@ -28,7 +28,7 @@
 
 
 <fieldset> <!-- created fields set to accent Form entries-->
-<form id="form" action="/Form/_blank" method="post" >
+<form id="form" action="/Form/Form_capture.txt" method="post" > <!-- I have nowhere to post this for to so this will not work. The URL would go here-->
 
     <p>
         <label for="name">Name:</label> <!-- get name -->
