--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <hr></hr>
 
 
-<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600" /img> <!-- Image of Balloon -->
-<p>Balloon over the Lake</p>
+<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600"> <!-- Image of Balloon -->
+<p>Balloon over the Lake</p> <!-- Image of a Hot air balloon points to image in Images Folder-->
 
 
 <body> <!-- Body is the main part of the page. -->
@@ -39,7 +39,7 @@
         <li>Play with Grandson</li>
         <li>Enjoy the Lake View</li>
         
-    </ul>
+    </ul><!-- end of unordered list-->
     </p>
  
 
