--- a/week1_pg2.html
+++ b/week1_pg2.html
@@ -27,26 +27,26 @@
     </div>       
 
     <!-- Table with Border -->
-<table border="1"> 
-
+<table border="1">I like to spend time in three different ways. <!-- description of the table--> 
+   
         <tr>
-            <th style="background-color: rgb(163, 152, 196)">Alone </th>
+            <th style="background-color: rgb(163, 152, 196)">Alone </th> <!-- Table Headers-->
             <th style="background-color: rgb(163, 152, 196)">Family </th>
             <th style="background-color: rgb(163, 152, 196)">Friends</th>
         </tr>
         <tr>
-            <td style="background-color: greenyellow">Fishing</td>
-            <th style="background-color: rgb(9, 190, 245)">Enjoy Grandson</th>
-            <th style="background-color: rgb(202, 16, 156)">Enjoy the Lake</th>
+            <td style="background-color: greenyellow">Fishing</td> <!-- Table columns in different colors-->
+            <th style="background-color: rgb(9, 190, 245)">Enjoy Grandson</th> <!-- Family enjoyment-->
+            <th style="background-color: rgb(202, 16, 156)">Enjoy the Lake</th> <!-- friends -->
         </tr>
    
         <tr>
-            <td style="background-color: greenyellow">Watch Movies</td>
-            <th style="background-color: rgb(9, 190, 245)">Michigan Football Games</th>
-            <th style="background-color: rgb(202, 16, 156)">Sports on TV</th>
+            <td style="background-color: greenyellow">Watch Movies</td> <!-- things to enjoy alone-->
+            <th style="background-color: rgb(9, 190, 245)">Michigan Football Games</th> <!-- with Family-->
+            <th style="background-color: rgb(202, 16, 156)">Sports on TV</th> <!-- with others-->
         </tr>
         <tr>
-            <td style="background-color: greenyellow">Learn Coding</td>
+            <td style="background-color: greenyellow">Learn Coding</td> <!-- things I do alone-->
             <th style="background-color: rgb(9, 190, 245)">Enjoy the Lake</th>
             <th style="background-color: rgb(202, 16, 156)">Learn new things</th>
         </tr>
@@ -66,6 +66,6 @@
     <a href="https://promineotech.com/" target="_blank">Promineotech.com</a> <!-- Promideo to work on assignments-->
     <a href="https://developer.mozilla.org/en-US/" target="_blank">MDM Developer Resources</a>  <!-- Coding Help-->
     <a href="https://github.com/TheDudas/Week1.git" target="_blank">John Dudas GitHub</a> <!-- My GitHub Repository-->
-</footer>
+</footer> <!-- end of Footer-->
 </html>
 
