--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Create a website using only HTML. 
+The website can be anything you like (within school guidelines) if it meets the following criteria:
+Create a homepage named index.html
+At least 3 pages with links to navigate between all pages present on each page.
+2 different size headers, 
+a list, 
+3 images, 
+a table, 
+and a form.  -->
+
 <head> <!-- defines the meta data and title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,18 +26,15 @@
         <a href="Week1_pg3.html">Photos
         <a href="week1_pg4.html">Form</a>
     </div>
-<hr></hr>
 
-
-<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600"> <!-- Image of Balloon -->
-<p>Balloon over the Lake</p> <!-- Image of a Hot air balloon points to image in Images Folder-->
-
+<hr> <!-- line seperating the Links from the text-->
 
 <body> <!-- Body is the main part of the page. -->
-    <p>
+    <p> <!-- new paragraph-->
         Hello, and welcome to the first page of Week 1 in Front-End Development. 
-    I will be typing useless information in here until I fill a few spaces. This is the first webpage I am building in the Promideo Front End Developer class. It is built using just HTML. 
-    There is no CSS or JavaScript at this time.  So enjoy the plain boring site until i can add some more details to somethign else.
+    I will be typing useless information in here until I fill a few spaces. <p>This is the first webpage I am building in the Promideo Front End Developer class. It is built using just HTML. </p>
+    There is no CSS or JavaScript at this time.  So enjoy the plain boring site until I can create a better page with CSS.  
+
 
 <hr /> <!--Horizontal Rule because why not?---> 
 
@@ -42,8 +50,13 @@
     </ul><!-- end of unordered list-->
     </p>
  
+<img src="./Images/Balloon_boat2.jpg" alt="A Hot Air Balloon over the lake" width="600" height="600"> <!-- Image of Balloon -->
+<font size="2">Balloon over the lake</font> <!-- reduced the font size to not draw too much attention to image description-->
+
 
 </body>
+<p></p> <!--Extra spaces-->
+<p></p>
 
 <a href="#top"> Go to Top</a> <br></br> <!-- Returns you to the top of the page-->
 
