--- a/week1_pg2.html
+++ b/week1_pg2.html
@@ -27,7 +27,7 @@
     </div>       
 
     <!-- Table with Border -->
-<table border="1">I like to spend time in three different ways. <!-- description of the table--> 
+<table border="1" width="75% height="75%">I like to spend time in three different ways. <!-- description of the table--> 
    
         <tr>
             <th style="background-color: rgb(163, 152, 196)">Alone </th> <!-- Table Headers-->
@@ -51,12 +51,12 @@
             <th style="background-color: rgb(202, 16, 156)">Learn new things</th>
         </tr>
         
-</table>
+</table> <!-- close table-->
 
-<hr>
+<hr> <!-- add line to seperate information-->
 
 </body>
-<a href="#top"> Go to Top</a> <br></br>
+<a href="#top"> Go to Top</a> <br></br> <!-- go to top-->
 
 <footer> <!-- bottom of the page Footers for consistent navigation -->
 
