--- a/week1_pg3.html
+++ b/week1_pg3.html
@@ -21,7 +21,7 @@
     
     <p><h3>Photos of things I like</h3></p> <!--emphasize title page-->
 
-<p>Fishing off the Dock, Hot air balloon, Fireworks, Moon, Sunrise in Mist, Dog Wilson, Clay & Wilson, Fami</p> 
+<p>Fishing off the Dock, Hot air balloon, Fireworks, Moon, Sunrise in Mist, Dog Wilson, Clay & Wilson, Family</p> 
 
 <!-- pictures of Fish and Lake things-->
  <img src="Images/smallfish.jpg" width="150" height="200"> <!-- made all picture the same size. Need to box them to add text. ?-->
