--- a/week1_pg4.html
+++ b/week1_pg4.html
@@ -32,14 +32,14 @@
 
     <p>
         <label for="name">Name:</label> <!-- get name -->
-        <input type="text" id="name" name="user_name" />
+        <input type="text" id="name" name="user_name" placeholder="Full Name"/>
     </p>
     <p>
-        <label for="email">Email:</label> <!-- get email -->
+        <label for="email" placeholder="email address">Email:</label> <!-- get email -->
         <input type="text" id="email" email="user_email"/>
     </p>
     <p>
-        <label for="phone">Phone Number:</label> <!-- get phone number-->
+        <label for="phone" placeholder="your phone number">Phone Number:</label> <!-- get phone number-->
         <input type="text" id="phone" phone="user-phone"/>
     </p>
     <fieldset>
