--- a/week1_pg4.html
+++ b/week1_pg4.html
@@ -11,7 +11,7 @@
         <div><hr>   
             <a href="index.html">Home</a>
             <a href="Week1_pg2.html">Tables</a>
-            <a href="Week1_pg3.html">Photos
+            <a href="Week1_pg3.html">Photos</a>
             <a href="week1_pg4.html">Form</a>
         </div>
 </nav>
@@ -28,47 +28,45 @@
 
 
 <fieldset> <!-- created fields set to accent Form entries-->
-<form id="form" action="/Form/Form_capture.txt" method="post" > <!-- I have nowhere to post this for to so this will not work. The URL would go here-->
+    <form id="form" action="/Form/Form_capture.txt" method="post" > <!-- I have nowhere to post this for to so this will not work. The URL would go here-->
 
-    <p>
-        <label for="name">Name:</label> <!-- get name -->
-        <input type="text" id="name" name="user_name" placeholder="Full Name"/>
-    </p>
-    <p>
-        <label for="email" placeholder="email address">Email:</label> <!-- get email -->
-        <input type="text" id="email" email="user_email"/>
-    </p>
-    <p>
-        <label for="phone" placeholder="your phone number">Phone Number:</label> <!-- get phone number-->
-        <input type="text" id="phone" phone="user-phone"/>
-    </p>
-    <fieldset>
-        <legend>Select Your Region of the Country</legend> <!-- determine where person is from-->
-            <div>
-                <input type="radio" id="east" name="Region" value="east" checked /> <!-- radio buttoms to select their area of the country-->
-                <label for="region">East</label> <!-- label radio button-->
-            </div>
-            <div>
-                <input type="radio" id="central" name="Region" value="central" checked/> <!-- radio buttoms to select their area of the country-->
-                <label for="region">Central</label> <!-- label radio button-->
-            </div>
-                <input type="radio" id="south" name="Region" value="south" checked/> <!-- radio buttoms to select their area of the country-->
-                <label for="region">South</label> <!-- label radio button-->
-            <div>
-                <input type="radio" id="west" name="Region" value="west" checked/> <!-- radio buttoms to select their area of the country-->
-                <label for="region">West</label> <!-- label radio button-->
-            </div>
-    </p> 
-    </fieldset>
-    <button type="submit">Submit</button> <!-- submits form-->
+        <p>
+            <label for="name">Name:</label> <!-- get name -->
+            <input type="text" id="name" name="user_name" placeholder="Full Name"/>
+        </p>
+        <p>
+            <label for="email">Email:</label> <!-- get email -->
+            <input type="email" id="email" name="user_email" placeholder="email address"/>
+        </p>
+        <p>
+            <label for="phone" >Phone Number:</label> <!-- get phone number-->
+            <input type="tel" id="phone" name="user-phone" placeholder="your phone number"/>
+        </p>
+        <fieldset>
+            <legend>Select Your Region of the Country</legend> <!-- determine where person is from-->
+                <div>
+                    <input type="radio" id="east" name="Region" value="east" checked /> <!-- radio buttoms to select their area of the country-->
+                    <label for="region">East</label> <!-- label radio button-->
+                </div>
+                <div>
+                    <input type="radio" id="central" name="Region" value="central" checked/> <!-- radio buttoms to select their area of the country-->
+                    <label for="region">Central</label> <!-- label radio button-->
+                </div>
+                    <input type="radio" id="south" name="Region" value="south" checked/> <!-- radio buttoms to select their area of the country-->
+                    <label for="region">South</label> <!-- label radio button-->
+                <div>
+                    <input type="radio" id="west" name="Region" value="west" checked/> <!-- radio buttoms to select their area of the country-->
+                    <label for="region">West</label> <!-- label radio button-->
+                </div>
+        </p> 
+        </fieldset>
+        <button type="submit">Submit</button> <!-- submits form-->
 
-
-</fieldset>
 </form>
 <p id="log"></p> <!--creates log for the page-->
 
 <a href="#top"> Go to Top</a> <!-- Takes you to the top of the page-->
-
+</fieldset>
 </body>
 
 
