--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <header><H1>John Dudas Website</H1></header>
 <!-- the space above the Body is the Header and head and HTML configurations that tell Browsers this is an HTML page. JS and CSS would be here if they were included. -->
  <!-- Navigation Bar to navigate each Webpage-->
-<!--Create a website using only HTML. 
+  
+<!--Assignment Create a website using only HTML. 
 The website can be anything you like (within school guidelines) if it meets the following criteria:
 Create a homepage named index.html
 At least 3 pages with links to navigate between all pages present on each page.
